[package]
name = "greenhouse"
version = "0.1.0"
authors = ["dfcowell"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.15"
serial = "0.4.0"

[dependencies.rusqlite]
version = "0.24.0"
features = ["bundled"]
